<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".NotifyActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/result_into"
        android:lineSpacingMultiplier="1.3"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notify_one_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notifyTemplateOneButton"
        android:text="@string/notify_one_button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/notify_no_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notify_two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notifyTemplateTwoButton"
        android:text="@string/notify_two_button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/notify_one_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notify_three_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notifyTemplateThreeButton"
        android:text="@string/notify_three_button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/notify_two_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notify_no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notifyTemplateNoButton"
        android:text="@string/notify_no_button"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>