<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".DevicesActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_bonded_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getBondedDevices"
        android:text="@string/get_bonded_devices"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_common_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getCommonDevices"
        android:text="@string/get_common_devices"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/get_bonded_devices" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/has_available_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="hasAvailableDevices"
        android:text="@string/has_available_devices"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/get_common_devices" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_available_kbytes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getAvailableKbytes"
        android:text="@string/get_available_kbytes"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/has_available_devices" />

    <RadioGroup
        android:id="@+id/get_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/get_available_kbytes" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/result_into"
        android:lineSpacingMultiplier="1.3"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>