<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".PermissionActivity">

    <RadioGroup
        android:id="@+id/select_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/device_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="DEVICE_MANAGER" />

        <RadioButton
            android:id="@+id/notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NOTIFY" />

        <RadioButton
            android:id="@+id/wear_user_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WEAR_USER_STATUS" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkPermission"
        android:text="@string/check_permission"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/select_auto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkPermissions"
        android:text="@string/check_permissions"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/check_permission" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="requestPermissions"
        android:text="@string/request_permissions"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/check_permissions" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/result_into"
        android:lineSpacingMultiplier="1.3"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>